force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_Lone_working__c.field-meta.xml
<CustomField>
    <fullName>FSM_Lone_working__c</fullName>
    <description>created as part of SFS-4487</description>
    <label>Lone working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>