force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_MaxFlowRateAchieved__c.field-meta.xml
<CustomField>
    <fullName>FSM_MaxFlowRateAchieved__c</fullName>
    <description>Created as a part of SFS-5315</description>
    <label>Maximum flow rate achieved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1lps</fullName>
            </value>
            <value>
                <fullName>2lps</fullName>
            </value>
            <value>
                <fullName>3lps</fullName>
            </value>
            <value>
                <fullName>4lps</fullName>
            </value>
            <value>
                <fullName>5lps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>