force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_MethodOfVentilation__c.field-meta.xml
<CustomField>
    <fullName>FSM_MethodOfVentilation__c</fullName>
    <label>Have considered method of ventilation?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>