force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_MethodOfWorkMethodStatement__c.field-meta.xml
<CustomField>
    <fullName>FSM_MethodOfWorkMethodStatement__c</fullName>
    <label>Method of working method statement</label>
    <length>80</length>
    <type>Text</type>
</CustomField>