force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_MethodStatementProduced__c.field-meta.xml
<CustomField>
    <fullName>FSM_MethodStatementProduced__c</fullName>
    <description>SFS-1316</description>
    <label>Method statement produced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>