force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_MonitoringUsedLoneWorking__c.field-meta.xml
<CustomField>
    <fullName>FSM_MonitoringUsedLoneWorking__c</fullName>
    <description>Added as part of SFS-6895</description>
    <label>Monitoring to be used for lone working</label>
    <length>255</length>
    <type>Text</type>
</CustomField>