force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_NTUAt30Mins__c.field-meta.xml
<CustomField>
    <fullName>FSM_NTUAt30Mins__c</fullName>
    <description>Created as a part of SFS-5315</description>
    <inlineHelpText>If above 2 NTU please continue to flush for a further 30 minutes – Please consider reducing to 1 lps after 30 minutes</inlineHelpText>
    <label>NTU at 30 mins</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>