force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_NTUAt45Mins__c.field-meta.xml
<CustomField>
    <fullName>FSM_NTUAt45Mins__c</fullName>
    <description>Created as a part of SFS-5315</description>
    <label>NTU at 45 mins</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>