force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OrderNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Number</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>FSM_OrderNumber</relationshipName>
    <type>Lookup</type>
</CustomField>