force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_Other2__c.field-meta.xml
<CustomField>
    <fullName>FSM_Other2__c</fullName>
    <label>Other 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>