force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_OtherSiteRisks__c.field-meta.xml
<CustomField>
    <fullName>FSM_OtherSiteRisks__c</fullName>
    <label>Other Site Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>