force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_OutOfHoursWork__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutOfHoursWork__c</fullName>
    <description>Added as part of SFS-6895</description>
    <label>Is this out of hours work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>