force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_OverHeadLinesIdentified__c.field-meta.xml
<CustomField>
    <fullName>FSM_OverHeadLinesIdentified__c</fullName>
    <label>Are there any over head lines identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>