force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_OverheadsStructuresIdentified__c.field-meta.xml
<CustomField>
    <fullName>FSM_OverheadsStructuresIdentified__c</fullName>
    <label>Overheads/structures  been identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>