force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ParkingToAccess__c.field-meta.xml
<CustomField>
    <fullName>FSM_ParkingToAccess__c</fullName>
    <description>Created as a part of SFS-3048</description>
    <label>Will parking obstruct access?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>