force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PermanentChange__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermanentChange__c</fullName>
    <description>Created as part of SFS-1325
Updated as part of SFS-4978</description>
    <label>Permanent Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>