force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PermitRecipient__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitRecipient__c</fullName>
    <description>Added as part of SFS-6895</description>
    <label>Permit Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>