force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PermitRecipientDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitRecipientDate__c</fullName>
    <description>Added as part of SFS-6895</description>
    <label>Permit Recipient Date</label>
    <type>DateTime</type>
</CustomField>