force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PermitValidFrom__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitValidFrom__c</fullName>
    <description>SFS-1316</description>
    <label>This permit is valid from:</label>
    <type>DateTime</type>
</CustomField>