force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PermitValidTo__c.field-meta.xml
<CustomField>
    <fullName>FSM_PermitValidTo__c</fullName>
    <description>SFS-1316</description>
    <label>This permit is valid to:</label>
    <type>DateTime</type>
</CustomField>