force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PlacementModeFindings__c.field-meta.xml
<CustomField>
    <fullName>FSM_PlacementModeFindings__c</fullName>
    <label>What did you find in Placement mode?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>