force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_Position__c.field-meta.xml
<CustomField>
    <fullName>FSM_Position__c</fullName>
    <description>SAL-2884</description>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FSM_ReinstatementType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Carriageway</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Footway</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Verge</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Cycleway</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Bridleway / Footpath</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Pedestrianised Zone</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Private Land</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>