force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PostOperationPosition__c.field-meta.xml
<CustomField>
    <fullName>FSM_PostOperationPosition__c</fullName>
    <description>Created as part of SFS-1325</description>
    <label>Post Operation Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Partly Open</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Not Operated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>