force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PotentialRiskLoneWorking__c.field-meta.xml
<CustomField>
    <fullName>FSM_PotentialRiskLoneWorking__c</fullName>
    <description>Added as part of SFS-6895</description>
    <label>Potential risk with lone working</label>
    <length>255</length>
    <type>Text</type>
</CustomField>