force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PowerCompanyContacted__c.field-meta.xml
<CustomField>
    <fullName>FSM_PowerCompanyContacted__c</fullName>
    <label>Have the power company been contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>