force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PowerCompanyContactedComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_PowerCompanyContactedComments__c</fullName>
    <label>Power company been contacted?Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>