force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PowerModeFindings__c.field-meta.xml
<CustomField>
    <fullName>FSM_PowerModeFindings__c</fullName>
    <label>What did you find in Power mode?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>