force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_PreUse_Genny_and_CAT_test_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>FSM_PreUse_Genny_and_CAT_test_Downloaded__c</fullName>
    <label>Pre Use Genny and CAT test Downloaded:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>