force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ProcedureUsedSomethingWrong__c.field-meta.xml
<CustomField>
    <fullName>FSM_ProcedureUsedSomethingWrong__c</fullName>
    <description>Added as part of SFS-6895</description>
    <label>Procedure used if something wrong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>