force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ProposedOp__c.field-meta.xml
<CustomField>
    <fullName>FSM_ProposedOp__c</fullName>
    <label>Proposed op</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjust</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Partly Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>