force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_RadioModeFindings__c.field-meta.xml
<CustomField>
    <fullName>FSM_RadioModeFindings__c</fullName>
    <label>What did you find in Radio mode?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>