force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ReadingOne__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReadingOne__c</fullName>
    <label>Reading One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>