force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ReadingTwo__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReadingTwo__c</fullName>
    <label>Reading Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>