force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ReinstatementType__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReinstatementType__c</fullName>
    <description>Created as a part of SFS-6563</description>
    <label>Reinstatement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99</fullName>
                <label>No Rein Required</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Interim</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Remed Guar Perm reset</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Remed Guar Perm no-reset</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Bar Hole</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Pole Test Reinstatement</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Core Sample</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Private Interim</label>
            </value>
            <value>
                <fullName>PX</fullName>
                <label>Private Method A</label>
            </value>
            <value>
                <fullName>PY</fullName>
                <label>Private Method B</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Method A- left Open</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Method B- stoned</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Perm REIN await sp. trt.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>