force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_RemovalOfCapEndsAndRecommissioning__c.field-meta.xml
<CustomField>
    <fullName>FSM_RemovalOfCapEndsAndRecommissioning__c</fullName>
    <description>SFS-2983</description>
    <label>Removal of cap ends and re-commissioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>