force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_ResidentialStatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_ResidentialStatus__c</fullName>
    <description>Created as part of sfs-6000</description>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Non Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>