force-app/main/default/objects/FSM_DCFLineItemInfra__c/fields/FSM_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>FSM_Reviewed_By__c</fullName>
    <description>created as part of sfs-7871</description>
    <label>Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>